<resources>
    <string name="app_name">ALPR</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="plate_number">Plate number:</string>
    <string name="ok">OK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="recognition">Recognition</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="about_us">About us</string>
    <string name="administrator">Administrator</string>
    <string name="users">Users</string>
    <string name="splash_screen_image">Splash screen image</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="about_us_message">This application was made by the help of leprechauns</string>
    <string name="close">Close</string>
    <string name="stolen_cars">Stolen cars</string>
    <string name="stolen_cars_database_unavailable">Stolen cars database unavailable</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="confirm_plate_deletion_message">"Are you sure you want to delete the plate number "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_stolen_car_message">Please enter the license plate number:</string>
    <string name="add_stolen_car_dialog_title">Add a stolen car</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="users_database_unavailable">Cannot access users database</string>
</resources>
